--- a/style.css
+++ b/style.css
@@ -285,9 +285,8 @@
     padding: 10px;
 }
 .mid3ai:hover {
-    border: 2px solid black;
+    border: 2px solid #000000;
     border-radius: 10px;
-    
 }
 .mid3ai img {
     height: 45vh;
